# docker-aws-tools

./: Dockerfile  Makefile  pyproject.toml
src/: bake-to-s3.sh  copy-to-s3.sh
